# python_study

./: .gitignore  main.py  pyproject.toml
clang/: main.cpp  make.bat  test.cpp  test.h
csharp/VSCtrl/: Program.cs  VSCtrl.csproj  VSCtrl.sln
go/md5_go/: main.go
python/PIL/: barcode_creatte.py  crossing.py  filename_printer.py  mono_clock.py  optpycs.py  setup.py
python/PIL/textures/: clock.xcf
python/PythonServer/: CGiServer.py  index.html  web.py
python/PythonServer/cgi-bin/: top.py
python/audio/: main.py  pyproject.toml
python/file_md5hash/: Readme.md  file_md5hash.py  make_exe.bat
python/jsonrpc/: client.py  pyproject.toml  server.py
python/stream/: main.py  pyproject.toml
python/upscale/: resup.py
